kubernetes/apps/storage/vitess/cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-vtadmin
spec:
  ports:
    - name: web
      port: 15000
      protocol: TCP
      targetPort: web
    - name: api
      port: 15001
      protocol: TCP
      targetPort: api
  selector:
    planetscale.com/cluster: mysql
    planetscale.com/component: vtadmin
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-vtctld
spec:
  ports:
    - name: web
      port: 15000
      protocol: TCP
      targetPort: web
    - name: grpc
      port: 15999
      protocol: TCP
      targetPort: grpc
  selector:
    planetscale.com/cluster: mysql
    planetscale.com/component: vtctld
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mysql.goyangi.io
    lbipam.cilium.io/ips: 192.168.1.127, ::ffff:192.168.1.127
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 15000
      protocol: TCP
      targetPort: web
    - name: grpc
      port: 15999
      protocol: TCP
      targetPort: grpc
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
  selector:
    planetscale.com/cluster: mysql
    planetscale.com/component: vtgate
