kubernetes/apps/storage/vitess/cluster/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vtctld
spec:
  hostnames:
    - vtctld.goyangi.io
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: mysql-vtctld
          port: 15000
        - name: mysql-vtctld
          port: 15999
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vtadmin
spec:
  hostnames:
    - vtadmin.goyangi.io
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: mysql-vtadmin
          port: 15000
        - name: mysql-vtadmin
          port: 15001
